--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@chakra-ui/react": "^3.27.0",
     "@emotion/react": "^11.14.0",
+    "aos": "^2.3.4",
     "framer-motion": "^12.23.22",
     "gsap": "^3.13.0",
     "react": "^19.1.1",
